#-------------------------------------------------------------------------------
# Rainfields ODIM HDF5 Library (rainhdf)
#
# Copyright (C) 2011 Commonwealth of Australia, Bureau of Meteorology
# See COPYING for licensing and warranty details
#-------------------------------------------------------------------------------

# keep autoreconf happy
ACLOCAL_AMFLAGS = -I m4

SUBDIRS=src tests

# package config
pkgconfigdir=$(libdir)/pkgconfig
pkgconfig_DATA=rainhdf.pc

# make sure Doxyfile gets distributed
dist_noinst_DATA = Doxyfile

