#-------------------------------------------------------------------------------
# Rainfields ODIM HDF5 Library (rainhdf)
#
# Copyright (C) 2011 Commonwealth of Australia, Bureau of Meteorology
# See COPYING for licensing and warranty details
#-------------------------------------------------------------------------------

# unit test application
unittest_SOURCES=test.cc
unittest_CPPFLAGS=$(AM_CPPFLAGS) @TEST_CPPFLAGS@
unittest_LDADD=$(top_builddir)/src/rainhdf/librainhdf.la @API_LIBS@
check_PROGRAMS=unittest

